<resources>
    <string name="app_name">Newz</string>
    <string name="by_deepak_saha">by: Deepak Saha</string>
    <string name="next_btn">Next</string>
    <string name="skip">SKIP</string>
    <string name="finish">Finish</string>
    <string name="lorem_ipsum_full">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</string>
    <string name="lorem_ipsum_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu">Home</string>
    <string name="explore_menu">Explore</string>
    <string name="list_menu">List</string>
    <string name="profile_menu">Profile</string>
    <string name="not_avail">N/A</string>
    <string name="author">Author:</string>
    <string name="source">Source:</string>
    <string name="following">Following</string>
    <string name="view_more">View more</string>
    <string name="done">Done</string>
    <string name="topics">TOPICS</string>
    <string name="today_date">Today, %1$s</string>
</resources>